fix(floating-icon-button): fix vertical align bug with icon

--- a/packages/bezier-react/src/components/AlphaFloatingIconButton/FloatingIconButton.module.scss
+++ b/packages/bezier-react/src/components/AlphaFloatingIconButton/FloatingIconButton.module.scss
@@ -161,6 +161,10 @@ $chromatic-colors: 'blue', 'red', 'green', 'cobalt', 'orange', 'pink', 'purple';
 
   /* internal components */
   & :where(.ButtonContent) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &:where(.loading) {
       visibility: hidden;
     }
